--- a/D3-025.html
+++ b/D3-025.html
@@ -6,12 +6,42 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js" charset="utf-8"></script>
   <style type="text/css">
   body {
-    padding:0;
-    margin:0;
-    background-color:#111;
-    font-family: BretzelGrotesk, sans-serif;
-    color:white;
-  }
+      padding:0;
+      margin:0;
+      background-color:#000000;
+      font-family: 'Circular Std', sans-serif;
+      letter-spacing: 0px;
+      color:white;
+
+      -webkit-font-smoothing: antialiased;
+         -moz-font-smoothing: antialiased;
+           -o-font-smoothing: antialiased;
+              font-smoothing: antialiased;
+    }
+    text {
+      font-size: 20px;
+    }
+    canvas { 
+      width: 100%; 
+      height: 100% 
+    }
+
+    a, a:link, a:visited {
+      color: white;
+      text-decoration: none;
+      -webkit-transition: opacity 1s ease;
+      -moz-transition: opacity 1s ease;
+      -o-transition: opacity 1s ease;
+      transition: opacity 1s ease;
+    }
+
+    a:hover, a:active {
+      opacity: .5;
+    }
+
+    .back:before {
+      content:"\2190 \2003";
+    }
 
   .axis path,
   .axis line {
@@ -63,8 +93,36 @@
 </head>
 
 <body>
-
+  <div class="return-notification" id="return-notification" style="z-index: 997; position: fixed; width:100%; top:45%; text-align: center; margin:0 auto; font-family:'Circular Std', Helvetica, serif; font-size:36px; letter-spacing:0px; display:none; opacity:0;">
+    <p id="return-notification-message" style="font-weight:800; margin: 0;">
+      Returning to overview in 10 seconds
+    </p>
+    <p style="font-weight:100; margin: 0; font-size:20px">
+      Move the cursor to stay on the page
+    </p>
+  </div>
+  <div class="loading" id="loading" style="z-index: 998; position: fixed; width:100%; top:45%; text-align: center; margin:0 auto; font-family:'Circular Std', Helvetica, serif; font-size:36px; letter-spacing:0px;">
+    <p style="font-weight:800; margin: 0">
+      Loading data...
+    </p>
+  </div>
+  <div class="info" id="info" style="z-index: 999; position: fixed; width:100%; bottom:0; text-align: center; margin:2em auto; font-family:'Circular Std', Helvetica, serif; font-size:16px; letter-spacing:0px;">
+    <p style="font-weight:800; margin: 0;">
+      Stellar evolution and the Hertzsprung-Russell diagram [025].
+    </p>
+    <p style="font-weight:100; margin: 0;">
+      Attempts at an interactive Hertzsprung-Russell diagram, that explains the evolutionary path of stars.
+    </p>
+    <p style="font-weight:100; margin: 0;">
+      <br>
+      <a class="back" href="http://antonlecock.github.io/masterproject/hub/">Return to overview</a>
+    </p>
+  </div>
+  <div id="svg-wrapper" style="z-index: -500">
+  </div>
   <script type="text/javascript">
+
+  var readySetGo = false;
 
     var ages = ["0300", "0500", "0530", "0559", "0580", "0590", "0600", "0605", "0609", "0615", "0619", "0625", "0630", "0634", "0640", "0644", "0650", "0655", "0659", "0665", "0669", "0675", "0680", "0684", "0690", "0694", "0700", "0705", "0709", "0715", "0719", "0725", "0730", "0734", "0740", "0744", "0750", "0755", "0759", "0765", "0769", "0775", "0780", "0784", "0790", "0794", "0800", "0805", "0810", "0814", "0819", "0825", "0830", "0835", "0839", "0844", "0850", "0855", "0860", "0864", "0869", "0875", "0880", "0885", "0889", "0894", "0900", "0905", "0910", "0914", "0919", "0925", "0930", "0935", "0939", "0944", "0950", "0955", "0960", "0964", "0969", "0975", "0980", "0985", "0989", "0994", "1000", "1005", "1010", "1014", "1019"]; //91 data files
 
@@ -144,7 +202,7 @@
 
 
     // Create the SVG Viewport
-    var svgContainer = d3.select("body").append("svg")
+    var svgContainer = d3.select("#svg-wrapper").append("svg")
                                         .attr("id","svg-container")
                                         .attr("class","svg-container")
                                         .attr("width", w)
@@ -586,7 +644,73 @@
     updateDiagram(ages[age-1]);
   }, 500);
 
+setTimeout(function() {
+    ready();
+    readySetGo = true;  
+  }, 1000);
+  
 
+  var svg = d3.select("#svg-container");
+
+  svg.style("-webkit-filter", "blur(" + 5 + "px)").style("opacity",.5);
+
+    var returnTimer = 0;
+    var returnCountdown = 0;
+    var returnLink = 0;
+    var returnNotification = d3.select('#return-notification');
+
+document.body.addEventListener('mousemove', resetTimers);
+
+function resetTimers() {
+      clearTimeout(returnTimer);
+      clearInterval(returnCountdown);
+      clearTimeout(returnLink);
+      countdown = 10;
+      returnNotification.transition().duration(500).style("opacity", 0);
+      setTimeout(function() {returnNotification.style("display", "none")}, 500);
+      if (readySetGo) {
+        ready();
+      }
+    };
+
+    function ready() {
+      document.getElementById('return-notification-message').innerHTML = "Returning to overview in 10 seconds";
+      d3.select("#loading").transition().duration(500).style("opacity", 0);
+      setTimeout(function() {d3.select("#loading").style("display", "none")}, 500);
+      svg.transition().delay(0).duration(1000)
+                         .style("-webkit-filter", "blur(" + 0 + "px)")
+                         .style("opacity",1);
+      d3.select("#info").transition().duration(500).style('opacity', 1);
+      returnTimer = setTimeout(returnToHub, 45000);
+    };
+
+    function returnToHub() {
+      returnNotification.style("display", "block").transition().duration(500)
+                        .style("opacity", 1);
+      svg.transition().delay(0).duration(10000).ease("linear-in-out")
+                         .style("-webkit-filter", "blur(" + 5 + "px)")
+                         .style("opacity",.2);
+      d3.select("#info").transition().duration(8000).ease("linear-in-out")
+                         .style('opacity', 0);
+
+      var countdown = 10; 
+      console.log(countdown);
+      returnCountdown = setInterval(function() {
+        countdown = countdown - 1;
+        document.getElementById('return-notification-message').innerHTML = "Returning to overview in " + countdown + " seconds";
+        console.log(countdown);
+      }, 1000)
+      returnLink = setTimeout(function() {returnNow();}, 10000)
+}
+
+function returnNow() {
+    var oldURL = document.referrer;
+    if (oldURL === "http://antonlecock.github.io/masterproject/hub/index.html") {
+      window.history.back();
+    } else {
+      window.location.href = "http://antonlecock.github.io/masterproject/hub/index.html";
+    }
+  };
 
 
   </script>
