--- a/story/001g.html
+++ b/story/001g.html
@@ -8,7 +8,7 @@
     body {
       padding:0;
       margin:0;
-      background-color:#12151a;
+      background-color:#000000;
       font-family: 'Circular Std', sans-serif;
       letter-spacing: 1px;
       color:white;
@@ -83,7 +83,7 @@
       paddingH = h/10;
 
   // COLORS    
-  var designerBlack = d3.rgb("#12151a"), // Define a nice black color for the background, store it as var
+  var designerBlack = d3.rgb("#000000"), // Define a nice black color for the background, store it as var
       designerWhite = d3.rgb("#ffe9d2"),
       designerRed = d3.rgb("#c83c46"),
       designerGreen = d3.rgb("#99B898");
