--- a/story/006l.html
+++ b/story/006l.html
@@ -7,7 +7,7 @@
     body {
       padding:0;
       margin:0;
-      background-color:#12151a;
+      background-color:#000000;
       font-family: 'Circular Std', sans-serif;
       letter-spacing: 1px;
       color:white;
@@ -97,7 +97,7 @@
 
   // COLORS    
   // var designerBlack = d3.rgb("#12141A"), // Define a nice black color for the background, store it as var
-     var designerBlack = d3.rgb("#12151a"),
+     var designerBlack = d3.rgb("#000000"),
       designerRed = d3.rgb("#c83c46"),
       designerWhite = d3.rgb("#ffe9d2"),
       designerBlue = d3.rgb("#696fc4");
@@ -109,7 +109,7 @@
       coldColor = d3.rgb("#ffd5a1"), // cold color in the graph
       coldestColor = d3.rgb("#ff5200"); // coldest color in the graph
 
-      d3.select("body").style("background-color", "#12151a");
+      d3.select("body").style("background-color", "#000000");
 
   var cScale = d3.scale.linear()
         .domain([0, 1])
