--- a/D3-004.html
+++ b/D3-004.html
@@ -11,6 +11,7 @@
   body {
     padding:0;
     margin:0;
+    font-family: 'Circular Std', sans-serif;
   }
 
   .axis path,
@@ -25,7 +26,7 @@
   }
 
   text {
-    font-family: sans-serif;
+    font-family: 'Circular Std', sans-serif;
     font-size: 11px;
   }
 
