--- a/D3-005.html
+++ b/D3-005.html
@@ -9,6 +9,7 @@
   body {
     padding:0;
     margin:0;
+    font-family: 'Circular Std', sans-serif;
   }
 
   .axis path,
@@ -23,7 +24,7 @@
   }
 
   text {
-    font-family: sans-serif;
+    font-family: 'Circular Std', sans-serif;
     font-size: 11px;
   }
 
