--- a/D3-006.html
+++ b/D3-006.html
@@ -10,6 +10,7 @@
   body {
     padding:0;
     margin:0;
+    font-family: 'Circular Std', sans-serif;
   }
 
   .axis path,
@@ -24,7 +25,7 @@
   }
 
   text {
-    font-family: sans-serif;
+    font-family: 'Circular Std', sans-serif;
     font-size: 11px;
   }
 
