--- a/D3-009.html
+++ b/D3-009.html
@@ -11,6 +11,7 @@
     padding:0;
     margin:0;
     background-color:#111;
+    font-family: 'Circular Std', sans-serif;
   }
 
   .axis path,
@@ -26,7 +27,7 @@
   }
 
   text {
-    font-family: sans-serif;
+    font-family: 'Circular Std', sans-serif;
     font-size: 11px;
     fill:white;
   }
