--- a/D3-017.html
+++ b/D3-017.html
@@ -9,7 +9,7 @@
     padding:0;
     margin:0;
     background-color:#111;
-    font-family:sans-serif;
+    font-family: 'Circular Std', sans-serif;
   }
 
   .axis path,
@@ -25,7 +25,7 @@
   }
 
   text {
-    font-family: sans-serif;
+    font-family: 'Circular Std', sans-serif;
     font-size: 11px;
     fill:white;
   }
