--- a/D3-018.html
+++ b/D3-018.html
@@ -9,7 +9,7 @@
     padding:0;
     margin:0;
     background-color:#111;
-    font-family:sans-serif;
+    font-family: 'Circular Std', sans-serif;
     color:white;
   }
 
@@ -26,7 +26,7 @@
   }
 
   text {
-    font-family: sans-serif;
+    font-family: 'Circular Std', sans-serif;
     font-size: 11px;
     fill:white;
   }
