--- a/story/001a.html
+++ b/story/001a.html
@@ -7,7 +7,7 @@
     body {
       padding:0;
       margin:0;
-      background-color:#12151a;
+      background-color:#000000;
       font-family: 'Circular Std', sans-serif;
       letter-spacing: 1px;
       color:white;
@@ -82,7 +82,7 @@
       paddingH = h/10;
 
   // COLORS    
-  var designerBlack = d3.rgb("#12151a"), // Define a nice black color for the background, store it as var
+  var designerBlack = d3.rgb("#000000"), // Define a nice black color for the background, store it as var
       designerRed = d3.rgb("#c83c46");
 
   var hottestColor = d3.rgb("#9eb5ff"), // hottest color in the graph
