--- a/story/002b.html
+++ b/story/002b.html
@@ -7,7 +7,7 @@
     body {
       padding:0;
       margin:0;
-      background-color:#12151a;
+      background-color:#000000;
       font-family: Circular Std, sans-serif;
       letter-spacing: 1px;
       color:white;
@@ -86,7 +86,7 @@
       paddingH = 100;
 
   // COLORS    
-  var designerBlack = d3.rgb("#12151a"), // Define a nice black color for the background, store it as var
+  var designerBlack = d3.rgb("#000000"), // Define a nice black color for the background, store it as var
       designerRed = d3.rgb("#c83c46"),
       designerWhite = d3.rgb("#ffe9d2"),
       designerBlue = d3.rgb("#696fc4"),
