--- a/story/002h.html
+++ b/story/002h.html
@@ -7,7 +7,7 @@
     body {
       padding:0;
       margin:0;
-      background-color:#12151a;
+      background-color:#000000;
       font-family: Circular Std, sans-serif;
       letter-spacing: 1px;
       color:white;
@@ -98,7 +98,7 @@
       paddingH = 100;
 
   // COLORS    
-  var designerBlack = d3.rgb("#12151a"),
+  var designerBlack = d3.rgb("#000000"),
 
       // designerBlack = d3.rgb("#1F2426"), // Define a nice black color for the background, store it as var
       designerRed = d3.rgb("#c83c46"),
