--- a/story/005b.html
+++ b/story/005b.html
@@ -7,7 +7,7 @@
     body {
       padding:0;
       margin:0;
-      background-color:#12151a;
+      background-color:#000000;
       font-family: "Circular Std", sans-serif;
       letter-spacing: 1px;
       color:white;
@@ -96,7 +96,7 @@
 
   // COLORS    
   // var designerBlack = d3.rgb("#12141A"), // Define a nice black color for the background, store it as var
-     var designerBlack = d3.rgb("#12151a"),
+     var designerBlack = d3.rgb("#000000"),
       designerRed = d3.rgb("#c83c46"),
       designerWhite = d3.rgb("#ffe9d2");
 
