--- a/story/005j.html
+++ b/story/005j.html
@@ -7,7 +7,7 @@
     body {
       padding:0;
       margin:0;
-      background-color:#12151a;
+      background-color:#000000;
       font-family: 'Circular Std', sans-serif;
       letter-spacing: 1px;
       color:white;
@@ -105,7 +105,7 @@
 
   // COLORS    
   // var designerBlack = d3.rgb("#12141A"), // Define a nice black color for the background, store it as var
-     var designerBlack = d3.rgb("#12151a"),
+     var designerBlack = d3.rgb("#000000"),
       designerRed = d3.rgb("#c83c46"),
       designerWhite = d3.rgb("#ffe9d2");
 
@@ -137,7 +137,7 @@
   var detachedContainer = document.createElement("custom");
   var dataContainer = d3.select(detachedContainer);
 
-  context.fillStyle = "#12151a";
+  context.fillStyle = "#000000";
   context.strokeStyle = 'none';
   context.fillRect(0, 0, w, h);
 
