--- a/story/006k.html
+++ b/story/006k.html
@@ -7,7 +7,7 @@
     body {
       padding:0;
       margin:0;
-      background-color:#12151a;
+      background-color:#000000;
       font-family: 'Circular Std', sans-serif;
       letter-spacing: 1px;
       color:white;
@@ -111,7 +111,7 @@
       coldColor = d3.rgb("#ffd5a1"), // cold color in the graph
       coldestColor = d3.rgb("#ff5200"); // coldest color in the graph
 
-      d3.select("body").style("background-color", "#12151a");
+      d3.select("body").style("background-color", "#000000");
 
   var cScale = d3.scale.linear()
         .domain([0, 1])
