--- a/story/007f.html
+++ b/story/007f.html
@@ -7,7 +7,7 @@
     body {
       padding:0;
       margin:0;
-      background-color:#12151a;
+      background-color:#000000;
       font-family: BretzelGrotesk, sans-serif;
       letter-spacing: 1px;
       color:white;
@@ -64,7 +64,7 @@
 
 
 
-      d3.select("body").style("background-color", "#12151a");
+      d3.select("body").style("background-color", "#000000");
 
     var cScale = d3.scale.linear()
         .domain([0, 1])
@@ -129,7 +129,7 @@
     function step() {
 
       // "clear" canvas
-      context.fillStyle = "rgba(18,21,26,1)";
+      context.fillStyle = "rgba(0,0,0,1)";
       context.strokeStyle = "none"
       context.fillRect(0,0,w,h);
       
