--- a/story/007i.html
+++ b/story/007i.html
@@ -7,7 +7,7 @@
     body {
       padding:0;
       margin:0;
-      background-color:#12151a;
+      background-color:#000000;
       font-family: 'Circular Std', sans-serif;
       letter-spacing: 1px;
       color:white;
@@ -122,7 +122,7 @@
     width = canvas.width,
     height = canvas.height;
 
-      d3.select("body").style("background-color", "#12151a");
+      d3.select("body").style("background-color", "#000000");
 
     var cScale = d3.scale.linear()
         .domain([0, 1])
@@ -195,7 +195,7 @@
     function step() {
 
       // "clear" canvas
-      context.fillStyle = "rgba(18,21,26,.55)";
+      context.fillStyle = "rgba(0,0,0,.55)";
       context.strokeStyle = "none"
       context.fillRect(0,0,w,h);
 
