--- a/story/007l.html
+++ b/story/007l.html
@@ -7,7 +7,7 @@
     body {
       padding:0;
       margin:0;
-      background-color:#12151a;
+      background-color:#000000;
       font-family: 'Circular Std', sans-serif;
       letter-spacing: 1px;
       color:white;
@@ -130,7 +130,7 @@
     width = canvas.width,
     height = canvas.height;
 
-      d3.select("body").style("background-color", "#12151a");
+      d3.select("body").style("background-color", "#000000");
 
     // var cScale = d3.scale.linear()
     //     .domain([0, 1])
@@ -215,7 +215,7 @@
     function step() {
 
       // "clear" canvas
-      context.fillStyle = "rgba(18,21,26,1)";
+      context.fillStyle = "rgba(0,0,0,1)";
       context.strokeStyle = "none"
       context.fillRect(0,0,w,h);
 
