--- a/story/007l3.html
+++ b/story/007l3.html
@@ -7,7 +7,7 @@
     body {
       padding:0;
       margin:0;
-      background-color:#12151a;
+      background-color:#000000;
       font-family: BretzelGrotesk, sans-serif;
       letter-spacing: 1px;
       color:white;
@@ -78,7 +78,7 @@
   //   width = canvas.width,
   //   height = canvas.height;
 
-      d3.select("body").style("background-color", "#12151a");
+      d3.select("body").style("background-color", "#000000");
 
     // var cScale = d3.scale.linear()
     //     .domain([0, 1])
