--- a/story/008a.html
+++ b/story/008a.html
@@ -7,7 +7,7 @@
     body {
       padding:0;
       margin:0;
-      background-color:#12151a;
+      background-color:#000000;
       font-family: BretzelGrotesk, sans-serif;
       letter-spacing: 1px;
       color:white;
@@ -78,11 +78,11 @@
     width = canvas.width,
     height = canvas.height;
 
-      d3.select("body").style("background-color", "#12151a");
+      d3.select("body").style("background-color", "#000000");
 
       var gradient=context.createRadialGradient(w/2,h/2,0,w/2,h/2,paddingW*10);
           gradient.addColorStop(0,"rgba(38,41,46,1)");
-          gradient.addColorStop(1,"rgba(18,21,26,.9)");
+          gradient.addColorStop(1,"rgba(0,0,0,.9)");
 
     var cScale = d3.scale.linear()
         .domain([0, 1])
