--- a/story/008d2.html
+++ b/story/008d2.html
@@ -7,7 +7,7 @@
     body {
       padding:0;
       margin:0;
-      background-color:#12151a;
+      background-color:#000000;
       font-family: BretzelGrotesk, sans-serif;
       letter-spacing: 1px;
       color:white;
@@ -61,7 +61,7 @@
     var xPos, yPos, zPos;
     var getal, t, resolution = 10;
 
-    var designerBlack = d3.rgb("#12151a"),
+    var designerBlack = d3.rgb("#000000"),
           designerRed = d3.rgb("#c83c46"),
         designerWhite = d3.rgb("#ffe9d2"),
          designerBlue = d3.rgb("#696fc4"),
