--- a/story/008g.html
+++ b/story/008g.html
@@ -7,7 +7,7 @@
     body {
       padding:0;
       margin:0;
-      background-color:#12151a;
+      background-color:#000000;
       font-family: Circular Std, sans-serif;
       text-transform: uppercase;
       color:white;
@@ -81,7 +81,7 @@
   var pointRadius = initialPointRadius; // radius of asteroid point
 
   // COLORS    
-  var designerBlack = d3.rgb("#12151a"),
+  var designerBlack = d3.rgb("#000000"),
         designerRed = d3.rgb("#c83c46"),
       designerWhite = d3.rgb("#ffe9d2"),
        designerBlue = d3.rgb("#696fc4"),
@@ -103,7 +103,7 @@
     width = canvas.width,
     height = canvas.height;
 
-      d3.select("body").style("background-color", "#12151a");
+      d3.select("body").style("background-color", "#000000");
 
     var cScale = d3.scale.linear()
         .domain([0, 1])
@@ -227,7 +227,7 @@
         // gradient.addColorStop(0,"white");
         // gradient.addColorStop(0.565, d3.rgb(designerBlue).darker(.5));
         gradient.addColorStop(0,"rgba(88,91,96,1)");
-        gradient.addColorStop(1,"rgba(18,21,26,1)");
+        gradient.addColorStop(1,"rgba(0,0,0,1)");
 
       context.fillStyle = gradient;
       context.strokeStyle = "none"
@@ -351,7 +351,7 @@
 
           // add orbiting points
           
-            context.fillStyle = "#12151a";
+            context.fillStyle = "#000000";
             context.strokeStyle = "#696fc4";
 
           // context.fillStyle = cScale(e);
