--- a/story/008h.html
+++ b/story/008h.html
@@ -7,7 +7,7 @@
     body {
       padding:0;
       margin:0;
-      background-color:#12151a;
+      background-color:#000000;
       font-family: Circular Std, sans-serif;
       text-transform: uppercase;
       color:white;
@@ -83,7 +83,7 @@
   var pointRadius = initialPointRadius; // radius of asteroid point
 
   // COLORS    
-  var designerBlack = d3.rgb("#12151a"),
+  var designerBlack = d3.rgb("#000000"),
         designerRed = d3.rgb("#c83c46"),
       designerWhite = d3.rgb("#ffe9d2"),
        designerBlue = d3.rgb("#696fc4"),
@@ -107,7 +107,7 @@
       width = canvas.width,
       height = canvas.height;
 
-  d3.select("body").style("background-color", "#12151a");
+  d3.select("body").style("background-color", "#000000");
 
   // Scales
   var cScale = d3.scale.linear()
@@ -213,7 +213,7 @@
       // "clear" canvas
       var gradient=context.createRadialGradient(w/2,h/2,0,w/2,h/2,enlarge/150);
       gradient.addColorStop(0,"rgba(88,91,96,1)");
-      gradient.addColorStop(1,"rgba(18,21,26,1)");
+      gradient.addColorStop(1,"rgba(0,0,0,1)");
 
       context.fillStyle = gradient;
       context.strokeStyle = "none"
@@ -314,7 +314,7 @@
           context.rotate(viewpointX);
 
           // add orbiting points
-          context.fillStyle = "#12151a";
+          context.fillStyle = "#000000";
           context.strokeStyle = "#696fc4";
           context.lineWidth = .2;
           context.beginPath();
