--- a/story/008m.html
+++ b/story/008m.html
@@ -7,7 +7,7 @@
     body {
       padding:0;
       margin:0;
-      background-color:#12151a;
+      background-color:#000000;
       font-family: Circular Std, sans-serif;
       text-transform: uppercase;
       color:white;
@@ -385,7 +385,7 @@
   var solarRadius = 0.005652 // solar radius in AU
 
   // COLORS    
-  var designerBlack = d3.rgb("#12151a"),
+  var designerBlack = d3.rgb("#000000"),
         designerRed = d3.rgb("#c83c46"),
       designerWhite = d3.rgb("#ffe9d2"),
        designerBlue = d3.rgb("#696fc4"),
@@ -408,7 +408,7 @@
       width = canvas.width,
       height = canvas.height;
 
-  d3.select("body").style("background-color", "#12151a");
+  d3.select("body").style("background-color", "#000000");
 
   // Scales
   var cScale = d3.scale.linear()
@@ -571,12 +571,12 @@
         }
         
           gradient.addColorStop(0,"rgba(78,81,86,1)");
-          gradient.addColorStop(1,"rgba(18,21,26,1)");
+          gradient.addColorStop(1,"rgba(0,0,0,1)");
 
         // if (relativeDistance) {
           context.fillStyle = gradient;
         // } else { 
-        //   context.fillStyle = "rgba(18,21,26,1)";
+        //   context.fillStyle = "rgba(0,0,0,1)";
         // }
 
         context.strokeStyle = "none";
@@ -847,7 +847,7 @@
           }
           // add orbiting points
 
-            context.fillStyle = "#12151a";
+            context.fillStyle = "#000000";
             context.strokeStyle = designerBlue;
             context.lineWidth = .2;
 
@@ -861,7 +861,7 @@
                 if (highlight) {
                   context.fillStyle = designerBlue;
                 } else {
-                  context.fillStyle = "#12151a";
+                  context.fillStyle = "#000000";
                 }
                 context.fillRect(x, y, 1, 1);
               }
@@ -869,7 +869,7 @@
               if (highlight) {
                 context.fillStyle = designerBlue;
               } else {
-                context.fillStyle = "#12151a";
+                context.fillStyle = "#000000";
               }
               context.fillRect(x, y, 1, 1);
               // context.arc(x, y, rScale(pointRadius / 100), 0, 2 * Math.PI);
