--- a/hub/index.html
+++ b/hub/index.html
@@ -1485,7 +1485,7 @@
 			    window.scrollBy(0,1); // horizontal and vertical scroll increments
 			    scrolledHeight = body.scrollTop; // keep track of the scrolled height
 
-			    if (scrolledHeight >= height - h) {
+			    if (scrolledHeight >= height - h - 600) {
 			    	window.scrollTo(0, 0); // back to the top, please!
 			    }
 			    if (scrolling) {
